--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ section{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url(./i.png);
+    background-image: url(./ai.png);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -341,7 +341,7 @@ section{
     display: grid;
 }
 .contact-form form input, form textarea{
-    width: 100px;
+    width: 180px;
     padding: 14px;
     background: var(--bg-color);
     color: var(--text-color);
@@ -354,13 +354,14 @@ section{
 .contact-form textarea{
     resize: none;
     height: 140px;
+    width: 350px;
 }
 .contact-form .submit{
     display: inline-block;
-    font-size: 50px;
+    font-size: 20px;
     background: var(--main-color);
     color: var(--text-color);
-    width: 90px;
+    width: 150px;
     transition: all .45s ease;
 }
 .contact-form .submit:hover{
